# differences

./: .env  README.md
differences/: .env  package-lock.json  package.json
differences/back/: app.py  config.py  extensions.py  imgtest.xlsx  pyproject.toml
differences/back/api/: admin_routes.py  views.py
differences/back/api/resources/: routes.py
differences/back/instance/: db.difgame
differences/back/migrations/versions/: 20be49a69771_.py  2783e2453035_.py  7b16d2c3cd9a_.py  abaaf617224f_.py  da5ad56d8f31_.py
differences/back/models/: tables.py
differences/back/templates/: home.html  img_loader.html  login.html  signup.html
differences/src/: App.jsx
differences/src/pages/: game.jsx  home.jsx
differences/src/store/: flux.jsx
differences/src/styles/: game.css
