[tool.poetry]
name = "trivia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
flask-restful = "^0.3.10"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
flask-cors = "^4.0.0"
pip = "^23.2.1"
install = "^1.3.5"
opencv-python = "^4.8.0.76"
requests = "^2.31.0"
flask-jwt-extended = "^4.5.2"
argon2-cffi = "^23.1.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
